--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "gatsby": "^2.25.2",
+    "gatsby-source-filesystem": "^2.4.2",
+    "gatsby-transformer-remark": "^2.9.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0"
   },
