made css changes and rearranged files

--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/nunito": "^4.1.0",
+    "bootstrap": "^3.3.7",
     "gatsby": "^2.25.2",
     "gatsby-source-filesystem": "^2.4.2",
     "gatsby-transformer-remark": "^2.9.2",
     "react": "^16.14.0",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^16.14.0"
   },
   "devDependencies": {
