--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Website for State of Foss in India report",
   "version": "0.1.0",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
