--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.5.3",
     "gatsby": "^2.25.2",
     "gatsby-image": "^2.9.0",
+    "gatsby-plugin-google-analytics": "^2.9.0",
     "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-source-filesystem": "^2.4.2",
     "gatsby-transformer-remark": "^2.9.2",
