--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "gatsby": "^2.25.2",
     "gatsby-image": "^2.9.0",
     "gatsby-plugin-google-analytics": "^2.9.0",
+    "gatsby-plugin-google-gtag": "^2.6.0",
     "gatsby-plugin-sharp": "^2.12.0",
+    "gatsby-plugin-sitemap": "^2.10.0",
     "gatsby-source-filesystem": "^2.4.2",
     "gatsby-transformer-remark": "^2.9.2",
     "gatsby-transformer-sharp": "^2.10.0",
     "react": "^16.14.0",
     "react-bootstrap": "^1.4.3",
-    "react-dom": "^16.14.0"
+    "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "prettier": "2.1.2"
