--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-google-analytics": "^2.9.0",
     "gatsby-plugin-google-gtag": "^2.6.0",
     "gatsby-plugin-manifest": "^2.10.0",
+    "gatsby-plugin-scroll-reveal": "0.0.7",
     "gatsby-plugin-sharp": "^2.12.0",
     "gatsby-plugin-sitemap": "^2.10.0",
     "gatsby-source-filesystem": "^2.4.2",
